# SVfit_standalone

./: CMakeLists.txt  README.md
interface/: LikelihoodFunctions.h  SVfitStandaloneAlgorithm.h  SVfitStandaloneLikelihood.h  SVfitStandaloneMarkovChainIntegrator.h  SVfitStandaloneQuantities.h
src/: CMakeLists.txt  LikelihoodFunctions.cc  SVfitStandaloneAlgorithm.cc  SVfitStandaloneLikelihood.cc  SVfitStandaloneMarkovChainIntegrator.cc  SVfitStandaloneQuantities.cc  selection.xml  svFitStandaloneAuxFunctions.cc
tests/: CMakeLists.txt  import-test.py  svFitTest.py
